[package]
edition = "2021"
name = "reservewatcher"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
cursive = "0.20"
cursive-aligned-view = "^0"
cursive_table_view = {git = "https://github.com/BonsaiDen/cursive_table_view"}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "std"]}
vrsc-rpc = {path = "../rust-vrsc-rpc/client"}
zmq = "0.9"
