[package]
edition = "2021"
name = "outpost"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
color-eyre = "0.6"
cursive = "0.20.0"
cursive-aligned-view = "^0"
cursive_table_view = { git = "https://github.com/BonsaiDen/cursive_table_view" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
vrsc-rpc = { path = "../rust-vrsc-rpc/client" }
zmq = "0.10"
serde = "1.0"
serde_json = "1.0"
config = "0.13"
os_info = "3.5"
dirs = "5.0.0"
url = "2.3"
